skeplib/tests/fixtures/resolver/valid/folder_recursive/string/nested/trim.sk
fn t() -> Int {
  return 1;
}
