skeplib/tests/fixtures/resolver/invalid/import_non_exported_symbol/main.sk
from a import hidden;
fn main() -> Int { return 0; }

